--- a/index.html
+++ b/index.html
@@ -2,158 +2,119 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+  <meta name="viewport"
+        content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=yes">
   <title>Select Your Language</title>
   <style>
     :root {
-      --primary: #1976d2;
-      --background: #f4f4f9;
-      --tile-bg: #ffffff;
-      --tile-radius: 12px;
-      --tile-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      --gap: 16px;
-      --font: 'Arial', sans-serif;
-      --done-filter: grayscale(100%) opacity(0.6);
+      --primary:      #1976d2;
+      --background:   #f4f4f9;
+      --tile-bg:      #ffffff;
+      --tile-radius:  12px;
+      --tile-shadow:  0 2px 8px rgba(0,0,0,.1);
+      --gap:          16px;
+      --font:         "Arial", sans-serif;
+      --done-filter:  grayscale(100%) opacity(.6);
     }
-    * { box-sizing: border-box; margin: 0; padding: 0; }
+    * { box-sizing:border-box; margin:0; padding:0 }
     body {
-      font-family: var(--font);
-      background: var(--background);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: var(--gap);
-      min-height: 100vh;
+      font-family:var(--font);
+      background:var(--background);
+      min-height:100vh;
+      display:flex; flex-direction:column; align-items:center;
+      padding:var(--gap);
     }
     h1 {
-      color: #333;
-      text-align: center;
-      margin-bottom: var(--gap);
-      font-size: 1.8rem;
+      color:#333;
+      text-align:center;
+      margin-bottom:var(--gap);
+      font-size:1.8rem;
     }
     .grid {
-      display: grid;
-      width: 100%;
-      max-width: 640px;
-      gap: var(--gap);
-      grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+      display:grid;
+      width:100%; max-width:640px;
+      gap:var(--gap);
+      grid-template-columns:repeat(auto-fit,minmax(120px,1fr));
     }
     .grid a {
-      position: relative;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: var(--tile-bg);
-      border-radius: var(--tile-radius);
-      box-shadow: var(--tile-shadow);
-      text-decoration: none;
-      color: var(--primary);
-      font-size: 1rem;
-      padding: var(--gap);
-      aspect-ratio: 1/1;
-      transition: background 0.2s, color 0.2s, transform 0.1s;
-      text-align: center;
-      user-select: none;
-      touch-action: manipulation;
+      position:relative;
+      display:flex; align-items:center; justify-content:center;
+      background:var(--tile-bg);
+      border-radius:var(--tile-radius);
+      box-shadow:var(--tile-shadow);
+      text-decoration:none;
+      color:var(--primary);
+      font-size:1rem;
+      padding:var(--gap);
+      aspect-ratio:1/1;
+      transition:background .2s,color .2s,transform .1s;
+      text-align:center;
+      user-select:none; touch-action:manipulation;
     }
-    .grid a:hover {
-      background: var(--primary);
-      color: #fff;
-    }
-    .grid a:active {
-      transform: scale(0.97);
-    }
-    .grid a.done {
-      filter: var(--done-filter);
-    }
+    .grid a:hover  { background:var(--primary); color:#fff }
+    .grid a:active { transform:scale(.97) }
+    .grid a.done   { filter:var(--done-filter) }
     .grid a.done::after {
-      content: '✔';
-      position: absolute;
-      top: 8px;
-      right: 8px;
-      font-size: 1.2em;
-      color: var(--primary);
+       content:"✔";
+       position:absolute; top:8px; right:8px;
+       font-size:1.2em; color:var(--primary);
     }
 
-    /* Enhanced “Back” button styling */
-    .return {
-      margin-top: var(--gap);
-      width: 100%;
-      max-width: 640px;
-      display: flex;
-      justify-content: center;
+    /* ---------- 10-rem sticky Return button ---------- */
+    #return-button{
+      position:fixed;
+      bottom:calc(env(safe-area-inset-bottom,0) + 1rem);
+      left:  calc(env(safe-area-inset-left ,0) + 1rem);
+      width:10rem; height:10rem; font-size:4rem;
+      border:none; border-radius:50%;
+      display:flex; align-items:center; justify-content:center;
+      background:var(--primary); color:#fff;
+      box-shadow:0 3px 8px rgba(0,0,0,.25);
+      z-index:1002;
+      touch-action:manipulation; cursor:pointer;
+      text-decoration:none;
     }
-    .return a {
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      width: 100%;
-      max-width: 200px;
-      aspect-ratio: 3/1;
-      background: var(--tile-bg);
-      color: var(--primary);
-      text-decoration: none;
-      border-radius: var(--tile-radius);
-      box-shadow: var(--tile-shadow);
-      padding: var(--gap);
-      transition: background 0.2s, color 0.2s, transform 0.1s;
-      user-select: none;
-      touch-action: manipulation;
-    }
-    .return a:hover {
-      background: var(--primary);
-      color: #fff;
-    }
-    .return a:active {
-      transform: scale(0.97);
-    }
-
-    @media (max-width: 400px) {
-      h1 { font-size: 1.4rem; }
-      .grid a { font-size: 0.9rem; padding: calc(var(--gap) / 2); }
-      .return a { font-size: 0.9rem; padding: calc(var(--gap) / 2); }
+    @media(max-width:400px){
+      #return-button{ width:7rem; height:7rem; font-size:3rem }
+      h1{ font-size:1.4rem }
+      .grid a{ font-size:.9rem; padding:calc(var(--gap)/2) }
     }
   </style>
 </head>
 <body>
   <h1>Welcome! Choose your language:</h1>
+
   <nav class="grid">
     <a href="index_en.html">English</a>
     <a href="index_es.html">Español</a>
     <a href="index_nl.html">Nederlands</a>
   </nav>
-  <div class="return">
-    
-  </div>
+
+     <!-- sticky “←” lives outside the grid -->
 
   <script>
-    // Long-press (800ms) to toggle “done” state and save in localStorage
-    document.addEventListener('DOMContentLoaded', () => {
-      const THRESHOLD = 800;
-      function initTile(tile) {
-        let timer = null;
-        const href = tile.getAttribute('href');
-        // restore saved state
-        if (localStorage.getItem('done_' + href) === 'true') {
+  // Long-press (800 ms) toggles “done” state and stores it in localStorage
+  document.addEventListener('DOMContentLoaded',()=>{
+    const THRESHOLD = 800;
+    document.querySelectorAll('.grid a').forEach(tile=>{
+      let timer=null, href = tile.getAttribute('href');
+      if(localStorage.getItem('done_'+href)==='true')
           tile.classList.add('done');
-        }
-        function startPress(e) {
-          timer = setTimeout(() => {
-            tile.classList.toggle('done');
-            localStorage.setItem('done_' + href, tile.classList.contains('done'));
-          }, THRESHOLD);
-        }
-        function cancelPress() {
-          clearTimeout(timer);
-        }
-        tile.addEventListener('mousedown', startPress);
-        tile.addEventListener('touchstart', startPress);
-        tile.addEventListener('mouseup', cancelPress);
-        tile.addEventListener('mouseleave', cancelPress);
-        tile.addEventListener('touchend', cancelPress);
-      }
-      document.querySelectorAll('.grid a').forEach(initTile);
+
+      const start = ()=> timer = setTimeout(()=>{
+          tile.classList.toggle('done');
+          localStorage.setItem('done_'+href,
+                               tile.classList.contains('done'));
+      }, THRESHOLD);
+      const cancel = ()=> clearTimeout(timer);
+
+      tile.addEventListener('mousedown',start);
+      tile.addEventListener('touchstart',start);
+      tile.addEventListener('mouseup',cancel);
+      tile.addEventListener('mouseleave',cancel);
+      tile.addEventListener('touchend',cancel);
     });
+  });
   </script>
 </body>
 </html>
